{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 27,
  "lineage": "84ae7769-638f-f045-2062-e1570095a046",
  "resources": [
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP-NAT-GW1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dca790edfc273282",
            "domain": "vpc",
            "id": "eipalloc-0dca790edfc273282",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-3-34-55.compute-1.amazonaws.com",
            "public_ip": "52.3.34.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-GW-EIP1"
            },
            "tags_all": {
              "Name": "NAT-GW-EIP1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP-NAT-GW2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077aac941cf8a1264",
            "domain": "vpc",
            "id": "eipalloc-077aac941cf8a1264",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-93-254-55.compute-1.amazonaws.com",
            "public_ip": "3.93.254.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-GW-EIP2"
            },
            "tags_all": {
              "Name": "NAT-GW-EIP2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dca790edfc273282",
            "association_id": "eipassoc-051dfb43e5e7fad50",
            "connectivity_type": "public",
            "id": "nat-079b1a82f485ec6ab",
            "network_interface_id": "eni-0d4c7e940c1e93a56",
            "private_ip": "10.0.1.182",
            "public_ip": "52.3.34.55",
            "subnet_id": "subnet-0cb5f70f335b7bbab",
            "tags": {
              "Name": "nat_gw1"
            },
            "tags_all": {
              "Name": "nat_gw1"
            }
          },
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW1",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pub_sub1",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077aac941cf8a1264",
            "association_id": "eipassoc-06a6ee749b1fcf9ba",
            "connectivity_type": "public",
            "id": "nat-04f2844a279c6bd18",
            "network_interface_id": "eni-0291cd75a956265c4",
            "private_ip": "10.0.2.217",
            "public_ip": "3.93.254.55",
            "subnet_id": "subnet-0ce0d10d07201de41",
            "tags": {
              "Name": "nat_gw2"
            },
            "tags_all": {
              "Name": "nat_gw2"
            }
          },
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW2",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pub_sub2",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:route-table/rtb-005b21ca82a70a89d",
            "id": "rtb-005b21ca82a70a89d",
            "owner_id": "557690623053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079b1a82f485ec6ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-rt-a"
            },
            "tags_all": {
              "Name": "pri-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-00af642f57e949c8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW1",
            "module.Nat-GW.aws_nat_gateway.nat_gw1",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pub_sub1",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:route-table/rtb-06b8e02540a06ec1d",
            "id": "rtb-06b8e02540a06ec1d",
            "owner_id": "557690623053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04f2844a279c6bd18",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-rt-b"
            },
            "tags_all": {
              "Name": "pri-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-00af642f57e949c8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW2",
            "module.Nat-GW.aws_nat_gateway.nat_gw2",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pub_sub2",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub3-with-pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b64f808c4a60a96",
            "route_table_id": "rtb-005b21ca82a70a89d",
            "subnet_id": "subnet-056c385d7b915bf8a"
          },
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW1",
            "module.Nat-GW.aws_nat_gateway.nat_gw1",
            "module.Nat-GW.aws_route_table.pri-rt-a",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pri_sub3",
            "module.VPC.aws_subnet.pub_sub1",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub4-with-pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a45dee02e081e8",
            "route_table_id": "rtb-06b8e02540a06ec1d",
            "subnet_id": "subnet-01212a4121037ba0a"
          },
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW2",
            "module.Nat-GW.aws_nat_gateway.nat_gw2",
            "module.Nat-GW.aws_route_table.pri-rt-b",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pri_sub4",
            "module.VPC.aws_subnet.pub_sub2",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:internet-gateway/igw-016145214e314b57d",
            "id": "igw-016145214e314b57d",
            "owner_id": "557690623053",
            "tags": {
              "Name": "ToDo-App-igw"
            },
            "tags_all": {
              "Name": "ToDo-App-igw"
            },
            "vpc_id": "vpc-00af642f57e949c8a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:route-table/rtb-0dc845b9cefb53dde",
            "id": "rtb-0dc845b9cefb53dde",
            "owner_id": "557690623053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016145214e314b57d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ToDo-App-pub_rt"
            },
            "tags_all": {
              "Name": "ToDo-App-pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00af642f57e949c8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a16be61b6f4630f",
            "route_table_id": "rtb-0dc845b9cefb53dde",
            "subnet_id": "subnet-0cb5f70f335b7bbab"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.pub_rt",
            "module.VPC.aws_subnet.pub_sub1",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b79669c357c62567",
            "route_table_id": "rtb-0dc845b9cefb53dde",
            "subnet_id": "subnet-0ce0d10d07201de41"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.pub_rt",
            "module.VPC.aws_subnet.pub_sub2",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:subnet/subnet-056c385d7b915bf8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056c385d7b915bf8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557690623053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub3",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pri-sub3",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00af642f57e949c8a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:subnet/subnet-01212a4121037ba0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01212a4121037ba0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557690623053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub4",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pri-sub4",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00af642f57e949c8a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:subnet/subnet-0cb5f70f335b7bbab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb5f70f335b7bbab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557690623053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub1",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pub-sub1",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00af642f57e949c8a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:subnet/subnet-0ce0d10d07201de41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce0d10d07201de41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557690623053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub2",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pub-sub2",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00af642f57e949c8a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557690623053:vpc/vpc-00af642f57e949c8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0486ceff0e84cec04",
            "default_route_table_id": "rtb-0df23cd7dd44c3609",
            "default_security_group_id": "sg-0c5338ad728a5e09c",
            "dhcp_options_id": "dopt-0eca837861d0da740",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00af642f57e949c8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df23cd7dd44c3609",
            "owner_id": "557690623053",
            "tags": {
              "Name": "ToDo-App-vpc"
            },
            "tags_all": {
              "Name": "ToDo-App-vpc"
            }
          }
        }
      ]
    }
  ]
}